// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag render should render the component - with children 1`] = `
<div
  className="tag_items"
>
  <div
    className="MuiChip-root chip_tag_item MuiChip-deletable"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="MuiChip-label"
    >
      <div>
        CHILDREN
      </div>
    </span>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiChip-deleteIcon"
      focusable="false"
      onClick={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
      />
    </svg>
  </div>
</div>
`;

exports[`Tag render should render the component - without children 1`] = `
<div
  className="tag_items"
>
  <div
    className="MuiChip-root chip_tag_item MuiChip-deletable"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="MuiChip-label"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiChip-deleteIcon"
      focusable="false"
      onClick={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
      />
    </svg>
  </div>
</div>
`;
